--- a/eVote360.Web/appsettings.json
+++ b/eVote360.Web/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-ITM8037\\SQLEXPRESS;Database=EVote360;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=.;Database=EVote360;Trusted_Connection=True;TrustServerCertificate=True"
     }
+
   },
   "AllowedHosts": "*"
 }
+
