--- a/eVote360.Web/appsettings.json
+++ b/eVote360.Web/appsettings.json
@@ -1,27 +1,29 @@
 {
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-Q8SCBEU\\SQLEXPRESS;Database=EVote360;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-Q8SCBEU\\SQLEXPRESS;Database=EVote360;Trusted_Connection=true;TrustServerCertificate=true"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=.;Database=EVote360;Trusted_Connection=True;TrustServerCertificate=True"
     }
-
   },
   "AllowedHosts": "*",
-
   "Smtp": {
     "Host": "smtp.yourprovider.com",
     "Port": "587",
     "User": "user@example.com",
     "Pass": "password",
     "From": "no-reply@evote.local"
+  },
+  "EmailSender": {
+    "Host": "smtp.yourprovider.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "User": "apikey_or_user",
+    "Password": "secret",
+    "FromEmail": "no-reply@evote360.local",
+    "FromName": "eVote360"
   }
-
 }
-
