--- a/eVote360.Infrastructure/eVote360.Infrastructure.csproj
+++ b/eVote360.Infrastructure/eVote360.Infrastructure.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="15.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.3.0" />
@@ -34,6 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\eVote360.Application\eVote360.Application.csproj" />
     <ProjectReference Include="..\eVote360.Domain\eVote360.Domain.csproj" />
+    <ProjectReference Include="..\eVote360.Shared\eVote360.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
